# GPUDeterminants

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Controller.cpp  Controller.h  GPUSliderule.cpp  GPUSliderule.h  LoadBalancer.cpp  LoadBalancer.h  determinants.cl
test/: CMakeLists.txt  TestMain.cpp
